--- a/client/src/components/office-map.css
+++ b/client/src/components/office-map.css
@@ -14,6 +14,9 @@
 
 /* Стили для масштабируемого контейнера */
 .map-scalable {
+  position: absolute;
+  top: 0;
+  left: 0;
   transform-origin: 0 0;
   will-change: transform, opacity;
   touch-action: none; /* Предотвращает стандартное поведение касания на мобильных устройствах */
